# auto-v2-contracts

./: .gitignore  Cargo.toml  README.md
auto-fee-manager/: Cargo.toml  NOTICE  README.md
auto-fee-manager/src/: contract.rs  error.rs  events.rs  handlers.rs  helpers.rs  msg.rs  state.rs
auto-fee-manager/tests/: authorization.rs  charge_fees.rs  claim_fees.rs  deposit.rs  distribute_fees.rs  instantiation.rs  queries.rs  subscription.rs  utils.rs  withdraw.rs
auto-workflow-manager/: ARCHITECTURE_BRIEF.md  Cargo.toml  README.md  THORNODE_EXAMPLES.md
auto-workflow-manager/examples/: README.md  execute-instance.json  execute-publish-workflow-with-whitelist.json  execute-publish-workflow.json
auto-workflow-manager/examples/full-cycle/: 1_autoclaimer_workflow.json  3_process_lauch_workflow_instance.txt  4_process_execute_actions.txt
auto-workflow-manager/src/: contract.rs  error.rs  execute.rs  msg.rs  query.rs  state.rs  utils.rs
auto-workflow-manager/tests/: actions.rs  instances.rs  utils.rs  whitelist.rs  workflows.rs
changelog/: 01_Charge_Fees_From_User_Wallet.md
contracts/: Cargo.toml  architecture_decisions.txt
contracts/auto-fee-manager/: Cargo.toml  THORNODE_EXAMPLES.md
contracts/auto-fee-manager/src/: contract.rs  error.rs  events.rs  handlers.rs  helpers.rs  lib.rs  msg.rs  state.rs
contracts/auto-fee-manager/tests/: authorization.rs  charge_fees.rs  claim_fees.rs  deposit.rs  distribute_fees.rs  instantiation.rs  queries.rs  subscription.rs  utils.rs  withdraw.rs
contracts/auto-workflow-manager/: ARCHITECTURE_BRIEF.md  Cargo.toml  README.md  THORNODE_EXAMPLES.md
contracts/auto-workflow-manager/examples/: README.md  execute-action-with-whitelist-validation.json  execute-cancel-instance.json  execute-publish-workflow-with-whitelist.json  execute-resume-instance.json  query-get-instances.json  query-get-workflow-instance.json
contracts/auto-workflow-manager/examples/full-cycle/: 2_process_publish.txt
contracts/auto-workflow-manager/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  utils.rs
contracts/auto-workflow-manager/tests/: actions.rs  fees_integration.rs  finish_instances.rs  instances.rs  payment_config.rs  reset_instance.rs  utils.rs  whitelist.rs  workflows.rs
contracts/echo-contract/: Cargo.toml  README.md
contracts/echo-contract/examples/: echo-simple.json  echo-with-attributes.json  instantiate.json  query-message-count.json
contracts/echo-contract/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/echo-contract/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/echo-contract/tests/: echo_tests.rs
examples/: fee-manager.md  workflow-manager.md
examples/mainnet/: wm_publish.txt  wm_publish_v2.txt
examples/stagenet/: borrame.json  fm_charge_fees_from_wallet.txt  fm_deposit.txt  wm_charge_fees.txt  wm_execute_instance.txt  wm_publish.txt  wm_publish_fin_test.txt  wm_set_payment_config.txt
proxy-auth-contract/: Cargo.toml  build-optimized-no-docker.sh  build-optimized.sh
proxy-auth-contract/src/: contract.rs  error.rs  event_utils.rs  execute.rs  integration_tests.rs  lib.rs  msg.rs  orca_msg.rs  query.rs  state.rs  tests_execute_flow.rs  tests_publish_template.rs  tests_state.rs  tests_template_utils.rs  tests_templates.rs  tests_utils.rs  utils.rs
proxy-auth-contract/tests/: templates.rs  utils.rs
sdks/auto-workflow-manager/: README.md  package-lock.json  package.json  tsconfig.json
sdks/auto-workflow-manager/src/: example.ts  executeAction.ts  index.ts  test.ts
sdks/auto-workflow-manager/src/client/: WorkflowManagerClient.ts
sdks/auto-workflow-manager/src/types/: index.ts
sdks/auto-workflow-manager/src/utils/: helpers.ts
workflow-manager/: Cargo.toml  README.pond.md
workflow-manager/examples/: execute-action.json  execute-pause-instance.json  execute-publish-workflow.json  instantiate.json  query-get-workflow.json
workflow-manager/src/: contract.rs  error.rs  execute.rs  msg.rs  query.rs  state.rs
workflow-manager/tests/: templates.rs  utils.rs  workflows.rs
