[workspace]
members = ["auto-fee-manager", "auto-workflow-manager", "packages/rujira-rs"]

# Resolver has to be set explicitely in workspaces, see https://github.com/rust-lang/cargo/issues/9956
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.0"

[workspace.dependencies]
anybuf                 = "0.5"
anyhow                 = "1"
cosmwasm-schema        = "2.1.0"
cosmwasm-std           = { version = "2.1.0", features = ["cosmwasm_2_0"] }
cw-multi-test          = { version = "2.4.0", features = ["cosmwasm_2_0"] }
cw-storage-plus        = "2.0.0"
cw2                    = "2.0.0"
schemars               = "0.8.16"
serde                  = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json             = "1.0.140"
thiserror              = { version = "1.0.58" }
cw-utils               = "2.0.0"
# Dependencies for rujira-rs
cosmos-sdk-proto       = { version = "0.26.1", default-features = false, features = ["cosmwasm"] }
cosmwasm-schema-derive = "2.1.3"
itertools              = "0.14.0"
postcard               = "1.1.1"
prost                  = "0.13"
regex                  = "1.11.1"
proptest               = "1.6.0"


[profile.release]
debug            = false
debug-assertions = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false