[package]
name = "auto-fee-manager"
version.workspace = true
authors = ["araiczyk-wbi <alejandro@wbi.dev>"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "schema_fee"
path = "src/bin/schema.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)/..":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0 auto-fee-manager
"""

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
hashbrown = "0.15.4"
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
cw-utils = { workspace = true }


[dev-dependencies]
cw-multi-test.workspace = true
