[package]
name = "auto-workflow-manager"
version.workspace = true
authors = ["Gustavo Fuhr <gustavo@wbi.dev>"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "schema_workflow"
path = "src/bin/schema.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)/..":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0 auto-workflow-manager
"""

[dependencies]
auto-fee-manager = { path = "../auto-fee-manager" }
cosmwasm-schema.workspace = true
cosmwasm-std = { workspace = true, features = ["cosmwasm_2_0", "stargate"] }
cw-storage-plus.workspace = true
cw2.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anybuf.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
